2002-11-01  Sam Steingold  <sds@gnu.org>

	* package.d (shadow): accept characters too
	(test_stringsym_arg): removed
	(FIND-PACKAGE, test_names_args, %IN-PACKAGE, FIND-ALL-SYMBOLS):
	use test_stringsymchar_arg() instead of test_stringsym_arg()
	(apply_symbols) [X3J13_161]: pass characters to shadow()
	* constobj.d (type_stringsym): removed
	* charstrg.d, lispbibl.d (test_stringsymchar_arg): declare global

2002-11-01  Sam Steingold  <sds@gnu.org>

	* package.d (FIND-PACKAGE): package object is a package designator too

2002-11-01  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): process argument `-p' _after_ all `-i' arguments
	so that the `-p' package can be created in one of the init files;
	this is backward compatible as long as all the files have an
	IN-PACKAGE statement, which they all certainly should have!

2002-11-01  Sam Steingold  <sds@gnu.org>

	* condition.lisp, macros2.lisp (etypecase, ctypecase): when
	KEYCLAUSELIST contains T, expand to TYPECASE

2002-11-01  Sam Steingold  <sds@gnu.org>

	* sequence.d (valid_type1): NULL --> (LIST 0); CONS --> (LIST (0) *)
	(fehler_seqtype_length): adjusted accordingly
	(SEQTYPE_LENGTH_MATCH): new macro
	(MAKE-SEQUENCE, coerce_sequence, COERCED-SUBSEQ, CONCATENATE, MAP)
	(MERGE): use it

2002-11-01  Sam Steingold  <sds@gnu.org>

	* loop.lisp (li-vars): new inline function
	(expand-loop): check for duplicate iteration variables;
	use ATOM for ON iteration, as per ANSI CL spec

2002-10-31  Sam Steingold  <sds@gnu.org>

	* error.d, lispbibl.d (fehler_lambda_expression):
	accept `caller' argument
	* symbol.d (%PUTD): pass caller to fehler_lambda_expression()
	* eval.d (coerce_function, apply, funcall): ditto

2002-10-30  Sam Steingold  <sds@gnu.org>

	* error.d (fehler_proper_list): accept `caller' argument
	* control.d (ENDP): pass caller to fehler_proper_list()
	* lispbibl.d (list_to_mv): ditto
	* list.d (endp, memq1, LIST-LLENGTH): ditto
	* sequence.d (LENGTH): ditto

2002-10-30  Sam Steingold  <sds@gnu.org>
